# uiux-rule-agent

./: README.md  agent.py  pyproject.toml
config/: ai.toml
data/: component-rules.csv  foundation-rules.csv  global-layout-rules.csv
examples/: sample-guidelines.md
examples/routing-demo/: mixed.md
examples/routing-demo/component-rules/: button.md
examples/routing-demo/foundation-rules/: tokens.md
examples/routing-demo/global-layout-rules/: layout.md
src/uiux_rule_agent/: __init__.py  cli.py  config.py  extractors.py  ingest.py  llm_extractor.py  writer.py
tests/: test_pipeline.py
