[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uiux-rule-agent"
version = "0.1.0"
description = "从网站或 Markdown 目录中生成原子化 UI/UX 规范规则。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
uiux-rule-agent = "uiux_rule_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
